# CDA2-Demokratie-Challange

./: Analyse_Einzelner_Abstimmungen.ipynb  Anleitung_Analyse.md  CDA2_Demokratie_Challenge_Gespraechsvorbereitung.md  PROJEKT_ZUSAMMENFASSUNG.md  README.md  allgemeine_analyse.ipynb  allgemeine_analyse_kantonaler_dataset.ipynb  analyse_detailliert.ipynb  analyse_einzelne-abstimmungen.ipynb  analyse_grob.ipynb  detailed-eda.ipynb  detailliertes_eda.ipynb  eda.ipynb  first_look_dataset.ipynb  grobes_eda.ipynb  pyproject.toml  test_utils_abstimmungen_analyse.py  test_utils_analyse_detailliert.py  test_utils_analyse_einzelne_abstimmungen.py  test_utils_analyse_einzelne_abstimmungen_fixed.py  test_utils_analyse_einzelne_abstimmungen_simple.py  test_utils_analyse_grob.py  test_utils_detailliertes_eda.py  test_utils_grobes_eda.py  utils_abstimmungen_analyse.py  utils_analyse_einzelne-abstimmungen.py  utils_analyse_einzelne_abstimmungen.py  utils_analyse_grob.py  utils_detailliertes_eda.py  utils_grobes_eda.py
Data/: 1959_Kantonale_clean.csv  1959_Kantone_original.csv  dataset.csv  dataset_o3high.csv  daten_nach_1971.csv  frauenstimmmrecht.csv  gesellschaftliche_abstimmungen.csv  gesellschaftliche_abstimmungen_annotiert.csv  gesellschaftliche_abstimmungen_bereinigt_final.csv  prepare_data.py
Jakov/: chatgpt-überarbeiteDaten.csv
data/: gesellschaftliche_abstimmungen_detailliert.csv  kantons_liberalitaets_ranking.csv
pdf/: Demokratie_Challenge_Liberalismus-Entwicklung.docx
