[project]
name = "cda2-demokratie-challange"
version = "0.1.0"
description = "This repo is for the challange module cda2 and is about democratic processes"
authors = [
    {name = "roberto",email = "roberto.fazekas.ges@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel (>=6.29.5,<7.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "geopandas (>=1.0.1,<2.0.0)",
    "descartes (>=1.1.0,<2.0.0)",
    "contextily (>=1.6.2,<2.0.0)",
    "scipy (>=1.15.2,<2.0.0)",
    "plotly (>=6.0.1,<7.0.0)",
    "pyshp (>=2.3.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"

